--- a/formulario1.html
+++ b/formulario1.html
@@ -10,7 +10,7 @@
 <body>
     <div class="grid-container">
         <header>
-            <a href="#" class="main-link">
+            <a href="paginaInicio.html" class="main-link">
                 <div class="top-bar">
                     <h1 class="marca">ADATOR</h1>
                     <div class="cont">
