--- a/paginaInicio.html
+++ b/paginaInicio.html
@@ -20,7 +20,7 @@
     </header>
     <aside>
         <button>Metroidvanias</button></br>
-        <a href="#" class="link">Juego1</a></br>
+        <a href="paginaJuego1.html" class="link">Juego1</a></br>
         <a href="#" class="link">Juego2</a></br>
         <a href="#" class="link">Juego3</a></br>
         <button>Roguelikes</button></br>
