--- a/paginaJuego1.html
+++ b/paginaJuego1.html
@@ -9,18 +9,20 @@
 
 <body>
     <header>
-        <div class="top-bar">
-            <h1 class="marca">ADATOR</h1>
-            <div class="cont">
-                <button class="comentarios">Comentarios</button>
-                <input type="text" placeholder="Buscar..." class="search-bar" />
-                <button class="steam">Instalar Steam</button>
+        <a href="paginaInicio.html">
+            <div class="top-bar">
+                <h1 class="marca">ADATOR</h1>
+                <div class="cont">
+                    <button class="comentarios">Comentarios</button>
+                    <input type="text" placeholder="Buscar..." class="search-bar" />
+                    <button class="steam">Instalar Steam</button>
+                </div>
             </div>
-        </div>
+        </a>
     </header>
      <aside>
         <button>Metroidvanias</button></br>
-        <a href="#" class="link">Juego1</a></br>
+        <a href="paginaJuego1.html" class="link">Juego1</a></br>
         <a href="#" class="link">Juego2</a></br>
         <a href="#" class="link">Juego3</a></br>
         <button>Roguelikes</button></br>
