--- a/HollowKnight.html
+++ b/HollowKnight.html
@@ -22,29 +22,29 @@
     </header>
      <aside>
         <button>Metroidvanias</button></br>
-        <a href="paginaJuego1.html" class="link">Juego1</a></br>
-        <a href="#" class="link">Juego2</a></br>
-        <a href="#" class="link">Juego3</a></br>
+        <a href="HollowKnight.html" class="link">Hollow Knight</a></br>
+        <a href="Ori.html" class="link">Ori & The Will of the Wisps</a></br>
+        <a href="Blasphemous.html" class="link">Blasphemous 2</a></br>
         <button>Roguelikes</button></br>
-        <a href="#" class="link">Juego4</a></br>
-        <a href="#" class="link">Juego5</a></br>
-        <a href="#" class="link">Juego6</a></br>
-        <button>RPGs</button></br>
-        <a href="#" class="link">Juego7</a></br>
-        <a href="#" class="link">Juego8</a></br>
-        <a href="#" class="link">Juego9</a></br>
+        <a href="Hades.html" class="link">Hades</a></br>
+        <a href="DeadCells.html" class="link">Dead Cells</a></br>
+        <a href="CultoftheLamb.html" class="link">Cult of the Lamb</a></br>
+        <button>Aventura</button></br>
+        <a href="BG3.html" class="link">Baldur's Gate 3</a></br>
+        <a href="RDR2.html" class="link">Red Dead Redemption 2</a></br>
+        <a href="GoWRagnarok.html" class="link">God of War Ragnarok</a></br>
         <button>Soulslike</button></br>
-        <a href="#" class="link">Juego10</a></br>
-        <a href="#" class="link">Juego11</a></br>
-        <a href="#" class="link">Juego12</a></br>
+        <a href="EldenRing.html" class="link">Elden Ring</a></br>
+        <a href="Sekiro.html" class="link">Sekiro</a></br>
+        <a href="DeathsDoor.html" class="link">Death's Door</a></br>
         <button>Simulación</button></br>
-        <a href="#" class="link">Juego13</a></br>
-        <a href="#" class="link">Juego14</a></br>
-        <a href="#" class="link">Juego15</a></br>
+        <a href="StardewValley.html" class="link">Stardew Valley</a></br>
+        <a href="Forza.html" class="link">Forza Horizon 5</a></br>
+        <a href="JWEvolution.html" class="link">Jurassic World Evolution 3</a></br>
         <button>FPS</button></br>
-        <a href="#" class="link">Juego16</a></br>
-        <a href="#" class="link">Juego17</a></br>
-        <a href="#" class="link">Juego18</a></br>
+        <a href="Battlefield.html" class="link">Battlefield 6</a></br>
+        <a href="Ultrakill.html" class="link">Ultrakill</a></br>
+        <a href="CS2.html" class="link">Counter Strike 2</a></br>
     </aside>
     <main>
         <img src="" alt="">
