--- a/paginaInicio.html
+++ b/paginaInicio.html
@@ -20,56 +20,56 @@
     </header>
     <aside>
         <button>Metroidvanias</button></br>
-        <a href="paginaJuego1.html" class="link">Juego1</a></br>
-        <a href="#" class="link">Juego2</a></br>
-        <a href="#" class="link">Juego3</a></br>
+        <a href="HollowKnight.html" class="link">Hollow Knight</a></br>
+        <a href="Ori.html" class="link">Ori & The Will of the Wisps</a></br>
+        <a href="Blasphemous.html" class="link">Blasphemous 2</a></br>
         <button>Roguelikes</button></br>
-        <a href="#" class="link">Juego4</a></br>
-        <a href="#" class="link">Juego5</a></br>
-        <a href="#" class="link">Juego6</a></br>
-        <button>RPGs</button></br>
-        <a href="#" class="link">Juego7</a></br>
-        <a href="#" class="link">Juego8</a></br>
-        <a href="#" class="link">Juego9</a></br>
+        <a href="Hades.html" class="link">Hades</a></br>
+        <a href="DeadCells.html" class="link">Dead Cells</a></br>
+        <a href="CultoftheLamb.html" class="link">Cult of the Lamb</a></br>
+        <button>Aventura</button></br>
+        <a href="BG3.html" class="link">Baldur's Gate 3</a></br>
+        <a href="RDR2.html" class="link">Red Dead Redemption 2</a></br>
+        <a href="GoWRagnarok.html" class="link">God of War Ragnarok</a></br>
         <button>Soulslike</button></br>
-        <a href="#" class="link">Juego10</a></br>
-        <a href="#" class="link">Juego11</a></br>
-        <a href="#" class="link">Juego12</a></br>
+        <a href="EldenRing.html" class="link">Elden Ring</a></br>
+        <a href="Sekiro.html" class="link">Sekiro</a></br>
+        <a href="DeathsDoor.html" class="link">Death's Door</a></br>
         <button>Simulación</button></br>
-        <a href="#" class="link">Juego13</a></br>
-        <a href="#" class="link">Juego14</a></br>
-        <a href="#" class="link">Juego15</a></br>
+        <a href="StardewValley.html" class="link">Stardew Valley</a></br>
+        <a href="Forza.html" class="link">Forza Horizon 5</a></br>
+        <a href="JWEvolution.html" class="link">Jurassic World Evolution 3</a></br>
         <button>FPS</button></br>
-        <a href="#" class="link">Juego16</a></br>
-        <a href="#" class="link">Juego17</a></br>
-        <a href="#" class="link">Juego18</a></br>
+        <a href="Battlefield.html" class="link">Battlefield 6</a></br>
+        <a href="Ultrakill.html" class="link">Ultrakill</a></br>
+        <a href="CS2.html" class="link">Counter Strike 2</a></br>
     </aside>
     <main>
         <div class="generos">
             <p>Metroidvanias</p></br>
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt=""></br>
+            <img src="./IMG/HollowKnight.jpg" alt="Hollow Knight">
+            <img src="./IMG/Ori&TheWillOfTheWisps.jpg" alt="Ori & The Will of the Wisp">
+            <img src="./IMG/Blasphemous2.jpg" alt="Blasphemous 2"></br>
             <p>Roguelikes</p>
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt=""></br>
-            <p>RPGs</p>
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt=""></br>
+            <img src="./IMG/Hades.jpg" alt="Hades">
+            <img src="./IMG/DeadCells.jpg" alt="Dead Cells">
+            <img src="./IMG/CultOfTheLamb.jpg" alt="Cult of the Lamb"></br>
+            <p>Aventura</p>
+            <img src="./IMG/BaldursGate3.jpg" alt="Baldur's Gate 3">
+            <img src="./IMG/RDR2.jpg" alt="Red Dead Redemption 2">
+            <img src="./IMG/GoWRagnarok.jpg" alt="God of War Ragnarok"></br>
             <p>Soulslike</p>
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt=""></br>
+            <img src="./IMG/EldenRing.jpg" alt="Elden Ring">
+            <img src="./IMG/Sekiro.jpg" alt="Sekiro">
+            <img src="./IMG/DeathsDoor.jpg" alt="Death's Door"></br>
             <p>Simulación</p>
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt=""></br>
+            <img src="./IMG/StardewValley.jpg" alt="Stardew Valley">
+            <img src="./IMG/ForzaHorizon5.jpg" alt="Forza Horizon 5">
+            <img src="./IMG/JurassicWorldEvolution3.jpg" alt="Jurassic World Evolution 3"></br>
             <p>FPS</p>
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt=""></br>
+            <img src="./IMG/Battlefield6.jpg" alt="Battlefield 6">
+            <img src="./IMG/Ultrakill.jpg" alt="Ultrakill">
+            <img src="./IMG/CounterStrike2.jpg" alt="Counter Strike 2"></br>
         </div>
     </main>
     <footer>
