Links de comunidad

--- a/HollowKnight.html
+++ b/HollowKnight.html
@@ -69,7 +69,7 @@
         </div>
     </main>
     <footer>
-        <a href="#" class="community-link">ÚNETE A LA COMUNIDAD</a>
+        <a href="https://discord.gg/YRG8GMNw" class="community-link">ÚNETE A LA COMUNIDAD</a>
         <p class="copyright">Copyright © 2025 - All rights reserved.</p>
     </footer>
 </body>
