--- a/formulario1.html
+++ b/formulario1.html
@@ -63,7 +63,7 @@
         </main>
 
         <footer>
-            <a href="#" class="community-link">ÚNETE A LA COMUNIDAD</a>
+            <a href="https://discord.gg/YRG8GMNw" class="community-link">ÚNETE A LA COMUNIDAD</a>
             <p class="copyright">Copyright © 2025 - All rights reserved.</p>
         </footer>
     </div>
