--- a/paginaInicio.html
+++ b/paginaInicio.html
@@ -19,27 +19,27 @@
         </div>
     </header>
     <aside>
-        <button>Metroidvanias</button></br>
+        <button class="categoria">Metroidvanias</button></br>
         <a href="HollowKnight.html" class="link">Hollow Knight</a></br>
         <a href="Ori.html" class="link">Ori & The Will of the Wisps</a></br>
         <a href="Blasphemous.html" class="link">Blasphemous 2</a></br>
-        <button>Roguelikes</button></br>
+        <button class="categoria">Roguelikes</button></br>
         <a href="Hades.html" class="link">Hades</a></br>
         <a href="DeadCells.html" class="link">Dead Cells</a></br>
         <a href="CultoftheLamb.html" class="link">Cult of the Lamb</a></br>
-        <button>Aventura</button></br>
+        <button class="categoria">Aventura</button></br>
         <a href="BG3.html" class="link">Baldur's Gate 3</a></br>
         <a href="RDR2.html" class="link">Red Dead Redemption 2</a></br>
         <a href="GoWRagnarok.html" class="link">God of War Ragnarok</a></br>
-        <button>Soulslike</button></br>
+        <button class="categoria">Soulslike</button></br>
         <a href="EldenRing.html" class="link">Elden Ring</a></br>
         <a href="Sekiro.html" class="link">Sekiro</a></br>
         <a href="DeathsDoor.html" class="link">Death's Door</a></br>
-        <button>Simulación</button></br>
+        <button class="categoria">Simulación</button></br>
         <a href="StardewValley.html" class="link">Stardew Valley</a></br>
         <a href="Forza.html" class="link">Forza Horizon 5</a></br>
         <a href="JWEvolution.html" class="link">Jurassic World Evolution 3</a></br>
-        <button>FPS</button></br>
+        <button class="categoria">FPS</button></br>
         <a href="Battlefield.html" class="link">Battlefield 6</a></br>
         <a href="Ultrakill.html" class="link">Ultrakill</a></br>
         <a href="CS2.html" class="link">Counter Strike 2</a></br>
