--- a/HollowKnight.html
+++ b/HollowKnight.html
@@ -4,72 +4,74 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ADATOR</title>
-    <link rel="stylesheet" href="paginaJuego1.css" />
+    <link rel="stylesheet" href="estiloJuegos.css" />
 </head>
 
 <body>
-    <header>
-        <a href="paginaInicio.html">
-            <div class="top-bar">
-                <h1 class="marca">ADATOR</h1>
-                <div class="cont">
-                    <button class="comentarios">Comentarios</button>
-                    <input type="text" placeholder="Buscar..." class="search-bar" />
-                    <button class="steam">Instalar Steam</button>
+    <div class="grid-container">
+        <header>
+            <a href="paginaInicio.html">
+                <div class="top-bar">
+                    <h1 class="marca">ADATOR</h1>
+                    <div class="cont">
+                        <button class="comentarios">Comentarios</button>
+                        <input type="text" placeholder="Buscar..." class="search-bar" />
+                        <button class="steam">Instalar Steam</button>
+                    </div>
                 </div>
-            </div>
-        </a>
-    </header>
-     <aside>
-        <button>Metroidvanias</button></br>
-        <a href="HollowKnight.html" class="link">Hollow Knight</a></br>
-        <a href="Ori.html" class="link">Ori & The Will of the Wisps</a></br>
-        <a href="Blasphemous.html" class="link">Blasphemous 2</a></br>
-        <button>Roguelikes</button></br>
-        <a href="Hades.html" class="link">Hades</a></br>
-        <a href="DeadCells.html" class="link">Dead Cells</a></br>
-        <a href="CultoftheLamb.html" class="link">Cult of the Lamb</a></br>
-        <button>Aventura</button></br>
-        <a href="BG3.html" class="link">Baldur's Gate 3</a></br>
-        <a href="RDR2.html" class="link">Red Dead Redemption 2</a></br>
-        <a href="GoWRagnarok.html" class="link">God of War Ragnarok</a></br>
-        <button>Soulslike</button></br>
-        <a href="EldenRing.html" class="link">Elden Ring</a></br>
-        <a href="Sekiro.html" class="link">Sekiro</a></br>
-        <a href="DeathsDoor.html" class="link">Death's Door</a></br>
-        <button>Simulación</button></br>
-        <a href="StardewValley.html" class="link">Stardew Valley</a></br>
-        <a href="Forza.html" class="link">Forza Horizon 5</a></br>
-        <a href="JWEvolution.html" class="link">Jurassic World Evolution 3</a></br>
-        <button>FPS</button></br>
-        <a href="Battlefield.html" class="link">Battlefield 6</a></br>
-        <a href="Ultrakill.html" class="link">Ultrakill</a></br>
-        <a href="CS2.html" class="link">Counter Strike 2</a></br>
-    </aside>
-    <main>
-        <img src="" alt="">
-        <div>
+            </a>
+        </header>
+        <aside>
+            <button>Metroidvanias</button></br>
+            <a href="HollowKnight.html" class="link">Hollow Knight</a></br>
+            <a href="Ori.html" class="link">Ori & The Will of the Wisps</a></br>
+            <a href="Blasphemous.html" class="link">Blasphemous 2</a></br>
+            <button>Roguelikes</button></br>
+            <a href="Hades.html" class="link">Hades</a></br>
+            <a href="DeadCells.html" class="link">Dead Cells</a></br>
+            <a href="CultoftheLamb.html" class="link">Cult of the Lamb</a></br>
+            <button>Aventura</button></br>
+            <a href="BG3.html" class="link">Baldur's Gate 3</a></br>
+            <a href="RDR2.html" class="link">Red Dead Redemption 2</a></br>
+            <a href="GoWRagnarok.html" class="link">God of War Ragnarok</a></br>
+            <button>Soulslike</button></br>
+            <a href="EldenRing.html" class="link">Elden Ring</a></br>
+            <a href="Sekiro.html" class="link">Sekiro</a></br>
+            <a href="DeathsDoor.html" class="link">Death's Door</a></br>
+            <button>Simulación</button></br>
+            <a href="StardewValley.html" class="link">Stardew Valley</a></br>
+            <a href="Forza.html" class="link">Forza Horizon 5</a></br>
+            <a href="JWEvolution.html" class="link">Jurassic World Evolution 3</a></br>
+            <button>FPS</button></br>
+            <a href="Battlefield.html" class="link">Battlefield 6</a></br>
+            <a href="Ultrakill.html" class="link">Ultrakill</a></br>
+            <a href="CS2.html" class="link">Counter Strike 2</a></br>
+        </aside>
+        <main>
             <img src="" alt="">
             <div>
-                <h1>JUEGO 1</h1></br>
-                <p>Descripcion juego 1</p></br>
+                <img src="" alt="">
+                <div>
+                    <h1>JUEGO 1</h1></br>
+                    <p>Descripcion juego 1</p></br>
+                </div>
+                <div>
+                    <h2>System Requirements</h2></br>
+                    <p>Especificaciones juego 1</p></br>
+                </div>
+                <div>
+                    <h3>JUEGO 1</h3></br>
+                    <p>Features juego 1</p></br>
+                </div>
+                <div>
+                    <h1>Reseñas</h1></br>
+                    <p>Reseñas del juego 1</p></br>
+                </div>
             </div>
-            <div>
-                <h2>System Requirements</h2></br>
-                <p>Especificaciones juego 1</p></br>
-            </div>
-            <div>
-                <h3>JUEGO 1</h3></br>
-                <p>Features juego 1</p></br>
-            </div>
-            <div>
-                <h1>Reseñas</h1></br>
-                <p>Reseñas del juego 1</p></br>
-            </div>
-        </div>
-    </main>
-    <footer>
-        <a href="https://discord.gg/YRG8GMNw" class="community-link">ÚNETE A LA COMUNIDAD</a>
-        <p class="copyright">Copyright © 2025 - All rights reserved.</p>
-    </footer>
+        </main>
+        <footer>
+            <a href="https://discord.gg/YRG8GMNw" class="community-link">ÚNETE A LA COMUNIDAD</a>
+            <p class="copyright">Copyright © 2025 - All rights reserved.</p>
+        </footer>
+    </div>
 </body>
