css y html de la pagina inicio terminados

--- a/formulario1.html
+++ b/formulario1.html
@@ -10,16 +10,12 @@
 <body>
     <div class="grid-container">
         <header>
-            <a href="paginaInicio.html" class="main-link">
-                <div class="top-bar">
-                    <h1 class="marca">ADATOR</h1>
-                    <div class="cont">
-                        <button class="comentarios">Comentarios</button>
-                        <input type="text" placeholder="Buscar..." class="search-bar" />
-                        <button class="steam">Instalar Steam</button>
-                    </div>
+            <div class="top-bar">
+                <h1 class="marca"><a href="paginaInicio.html" class="main-link">ADATOR</a></h1>
+                <div class="cont">
+                    <button class="steam"><a href="https://store.steampowered.com/about" class="main-link">Instalar Steam</a></button>
                 </div>
-            </a>
+            </div>
         </header>
 
         <main class="container">
