--- a/paginaInicio.html
+++ b/paginaInicio.html
@@ -13,9 +13,9 @@
             <div class="top-bar">
                 <h1 class="marca">ADATOR</h1>
                 <div class="cont">
-                    <button class="comentarios">Comentarios</button>
+                    <button class="comentarios" onclick="window.location.href='formulario1.html'"">Comentarios</button>
                     <input type="text" placeholder="Buscar..." class="search-bar" />
-                    <button class="steam">Instalar Steam</button>
+                    <button class="steam"><a href="https://store.steampowered.com/about" class="main-link">Instalar Steam</a></button>
                 </div>
             </div>
         </header>
