me va a explotar el cerebro

--- a/HollowKnight.html
+++ b/HollowKnight.html
@@ -10,61 +10,59 @@
 <body>
     <div class="grid-container">
         <header>
-            <a href="paginaInicio.html">
                 <div class="top-bar">
-                    <h1 class="marca">ADATOR</h1>
+                    <h1 class="marca"><a href="paginaInicio.html" class="main-link">ADATOR</a></h1>
                     <div class="cont">
-                        <button class="comentarios">Comentarios</button>
+                        <button class="comentarios" onclick="window.location.href='formulario1.html'"">Comentarios</button>
                         <input type="text" placeholder="Buscar..." class="search-bar" />
-                        <button class="steam">Instalar Steam</button>
+                        <button class="steam"><a href="https://store.steampowered.com/about" class="main-link">Instalar Steam</a></button>
                     </div>
                 </div>
-            </a>
         </header>
         <aside>
-            <button>Metroidvanias</button></br>
+            <button class="categoria">Metroidvanias</button></br>
             <a href="HollowKnight.html" class="link">Hollow Knight</a></br>
             <a href="Ori.html" class="link">Ori & The Will of the Wisps</a></br>
             <a href="Blasphemous.html" class="link">Blasphemous 2</a></br>
-            <button>Roguelikes</button></br>
+            <button class="categoria">Roguelikes</button></br>
             <a href="Hades.html" class="link">Hades</a></br>
             <a href="DeadCells.html" class="link">Dead Cells</a></br>
             <a href="CultoftheLamb.html" class="link">Cult of the Lamb</a></br>
-            <button>Aventura</button></br>
+            <button class="categoria">Aventura</button></br>
             <a href="BG3.html" class="link">Baldur's Gate 3</a></br>
             <a href="RDR2.html" class="link">Red Dead Redemption 2</a></br>
             <a href="GoWRagnarok.html" class="link">God of War Ragnarok</a></br>
-            <button>Soulslike</button></br>
+            <button class="categoria">Soulslike</button></br>
             <a href="EldenRing.html" class="link">Elden Ring</a></br>
             <a href="Sekiro.html" class="link">Sekiro</a></br>
             <a href="DeathsDoor.html" class="link">Death's Door</a></br>
-            <button>Simulación</button></br>
+            <button class="categoria">Simulación</button></br>
             <a href="StardewValley.html" class="link">Stardew Valley</a></br>
             <a href="Forza.html" class="link">Forza Horizon 5</a></br>
             <a href="JWEvolution.html" class="link">Jurassic World Evolution 3</a></br>
-            <button>FPS</button></br>
+            <button class="categoria">FPS</button></br>
             <a href="Battlefield.html" class="link">Battlefield 6</a></br>
             <a href="Ultrakill.html" class="link">Ultrakill</a></br>
             <a href="CS2.html" class="link">Counter Strike 2</a></br>
         </aside>
         <main>
-            <img src="" alt="">
+            <img class="fondo" src="./IMG/HollowKnight1.jpg" alt="HollowKnightFondo">
             <div>
-                <img src="" alt="">
+                <img class="portada" src="./IMG/HollowKnight.jpg" alt="HollowKnight">
                 <div>
-                    <h1>JUEGO 1</h1></br>
+                    <h2>JUEGO 1</h2></br>
                     <p>Descripcion juego 1</p></br>
                 </div>
                 <div>
-                    <h2>System Requirements</h2></br>
+                    <h3>System Requirements</h3></br>
                     <p>Especificaciones juego 1</p></br>
                 </div>
                 <div>
-                    <h3>JUEGO 1</h3></br>
+                    <h4>JUEGO 1</h4></br>
                     <p>Features juego 1</p></br>
                 </div>
                 <div>
-                    <h1>Reseñas</h1></br>
+                    <h5>Reseñas</h5></br>
                     <p>Reseñas del juego 1</p></br>
                 </div>
             </div>
