--- a/HollowKnight.html
+++ b/HollowKnight.html
@@ -13,7 +13,7 @@
                 <div class="top-bar">
                     <h1 class="marca"><a href="paginaInicio.html" class="main-link">ADATOR</a></h1>
                     <div class="cont">
-                        <button class="comentarios" onclick="window.location.href='formulario1.html'"">Comentarios</button>
+                        <button class="comentarios" onclick="window.location.href='formulario1.html'">Comentarios</button>
                         <input type="text" placeholder="Buscar..." class="search-bar" />
                         <button class="steam"><a href="https://store.steampowered.com/about" class="main-link">Instalar Steam</a></button>
                     </div>
