--- a/HollowKnight.html
+++ b/HollowKnight.html
@@ -50,7 +50,7 @@
             <div>
                 <img class="portada" src="./IMG/HollowKnight.jpg" alt="HollowKnight">
                 <div>
-                    <h2>JUEGO 1</h2></br>
+                    <h2>Hollow Knight</h2></br>
                     <p>Descripcion juego 1</p></br>
                 </div>
                 <div>
