--- a/formulario/formulario1.html
+++ b/formulario/formulario1.html
@@ -11,7 +11,7 @@
     <div class="grid-container">
         <header>
             <div class="top-bar">
-                <h1 class="marca"><a href="paginaInicio.html" class="main-link">ADATOR</a></h1>
+                <h1 class="marca"><a href="../paginaPrincipal/paginaInicio.html" class="main-link">ADATOR</a></h1>
                 <div class="cont">
                     <button class="steam"><a href="https://store.steampowered.com/about" class="main-link">Instalar Steam</a></button>
                 </div>
