--- a/juegos/HollowKnight.html
+++ b/juegos/HollowKnight.html
@@ -58,7 +58,7 @@
                     <p>Especificaciones juego 1</p></br>
                 </div>
                 <div>
-                    <h4>JUEGO 1</h4></br>
+                    <h4>Features</h4></br>
                     <p>Features juego 1</p></br>
                 </div>
                 <div>
