--- a/juegos/HollowKnight.html
+++ b/juegos/HollowKnight.html
@@ -47,24 +47,28 @@
         </aside>
         <main>
             <img class="fondo" src="../IMG/HollowKnight1.jpg" alt="HollowKnightFondo">
-            <div>
+
+            <div class="info-juego">
                 <img class="portada" src="../IMG/HollowKnight.jpg" alt="HollowKnight">
-                <div>
-                    <h2>Hollow Knight</h2></br>
-                    <p>Descripcion juego 1</p></br>
+                <div class="texto-juego">
+                    <h2>Hollow Knight</h2>
+                    <p>Descripcion juego 1</p>
                 </div>
-                <div>
-                    <h3>System Requirements</h3></br>
-                    <p>Especificaciones juego 1</p></br>
-                </div>
-                <div>
-                    <h4>Features</h4></br>
-                    <p>Features juego 1</p></br>
-                </div>
-                <div>
-                    <h5>Reseñas</h5></br>
-                    <p>Reseñas del juego 1</p></br>
-                </div>
+            </div>
+
+            <div class="bloque-info">
+                <h3>System Requirements</h3>
+                <p>Especificaciones juego 1</p>
+            </div>
+
+            <div class="bloque-info">
+                <h4>Features</h4>
+                <p>Features juego 1</p>
+            </div>
+
+            <div class="bloque-info">
+                <h5>Reseñas</h5>
+                <p>Reseñas del juego 1</p>
             </div>
         </main>
         <footer>
