Cambios en los juegos

--- a/juegos/BG3.html
+++ b/juegos/BG3.html
@@ -46,10 +46,10 @@
             <a href="../juegos/CS2.html" class="link">Counter Strike 2</a></br>
         </aside>
         <main>
-            <img class="fondo" src="../IMG/HollowKnight1.jpg" alt="HollowKnightFondo">
+            <img class="fondo" src="../IMG/fondos/BG3Fondo.jpg" alt="BG3Fondo">
 
             <div class="info-juego">
-                <img class="portada" src="../IMG/BaldursGate3.jpg" alt="HollowKnight">
+                <img class="portada" src="../IMG/BaldursGate3.jpg" alt="BG3">
                 <div class="texto-juego">
                     <h2>bBaldurs Gate 3</h2>
                     <p>Descripcion juego 1</p>
