--- a/juegos/Battlefield.html
+++ b/juegos/Battlefield.html
@@ -46,10 +46,10 @@
             <a href="../juegos/CS2.html" class="link">Counter Strike 2</a></br>
         </aside>
         <main>
-            <img class="fondo" src="../IMG/HollowKnight1.jpg" alt="HollowKnightFondo">
+            <img class="fondo" src="../IMG/fondos/BtfFondo" alt="BattleFieldFondo">
 
             <div class="info-juego">
-                <img class="portada" src="../IMG/Battlefield6.jpg" alt="HollowKnight">
+                <img class="portada" src="../IMG/Battlefield6.jpg" alt="BattleField">
                 <div class="texto-juego">
                     <h2>Battlefield 6</h2>
                     <p>Descripcion juego 1</p>
