--- a/juegos/GoWRagnarok.html
+++ b/juegos/GoWRagnarok.html
@@ -46,10 +46,10 @@
             <a href="../juegos/CS2.html" class="link">Counter Strike 2</a></br>
         </aside>
         <main>
-            <img class="fondo" src="../IMG/HollowKnight1.jpg" alt="HollowKnightFondo">
+            <img class="fondo" src="../IMG/GoWFondo.jpg" alt="GodIfWarFondo">
 
             <div class="info-juego">
-                <img class="portada" src="../IMG/GoWRagnarok.jpg" alt="HollowKnight">
+                <img class="portada" src="../IMG/GoWRagnarok.jpg" alt="GodOfWar">
                 <div class="texto-juego">
                     <h2>God Of War: Ragnarok</h2>
                     <p>Descripcion juego 1</p>
