--- a/juegos/Hades.html
+++ b/juegos/Hades.html
@@ -46,10 +46,10 @@
             <a href="../juegos/CS2.html" class="link">Counter Strike 2</a></br>
         </aside>
         <main>
-            <img class="fondo" src="../IMG/HollowKnight1.jpg" alt="HollowKnightFondo">
+            <img class="fondo" src="../IMG/fondos/HadesFondo.jpg" alt="HadesFondo">
 
             <div class="info-juego">
-                <img class="portada" src="../IMG/Hades.jpg" alt="HollowKnight">
+                <img class="portada" src="../IMG/Hades.jpg" alt="Hades">
                 <div class="texto-juego">
                     <h2>Hades</h2>
                     <p>Descripcion juego 1</p>
