--- a/juegos/HollowKnight.html
+++ b/juegos/HollowKnight.html
@@ -46,7 +46,7 @@
             <a href="../juegos/CS2.html" class="link">Counter Strike 2</a></br>
         </aside>
         <main>
-            <img class="fondo" src="../IMG/HollowKnight1.jpg" alt="HollowKnightFondo">
+            <img class="fondo" src="../IMG/fondos/HollowKnightFondo.jpg" alt="HollowKnightFondo">
 
             <div class="info-juego">
                 <img class="portada" src="../IMG/HollowKnight.jpg" alt="HollowKnight">
