--- a/juegos/Sekiro.html
+++ b/juegos/Sekiro.html
@@ -46,10 +46,10 @@
             <a href="../juegos/CS2.html" class="link">Counter Strike 2</a></br>
         </aside>
         <main>
-            <img class="fondo" src="../IMG/HollowKnight1.jpg" alt="HollowKnightFondo">
+            <img class="fondo" src="../IMG/fondos/SekiroFondo.jpg" alt="SekiroFondo">
 
             <div class="info-juego">
-                <img class="portada" src="../IMG/Sekiro.jpg" alt="HollowKnight">
+                <img class="portada" src="../IMG/Sekiro.jpg" alt="Sekiro">
                 <div class="texto-juego">
                     <h2>Sekiro</h2>
                     <p>Descripcion juego 1</p>
