--- a/juegos/Blasphemous.html
+++ b/juegos/Blasphemous.html
@@ -46,10 +46,10 @@
             <a href="../juegos/CS2.html" class="link">Counter Strike 2</a></br>
         </aside>
         <main>
-            <img class="fondo" src="../IMG/HollowKnight1.jpg" alt="HollowKnightFondo">
+            <img class="fondo" src="../IMG/fondos/BlasphemousFondo.jpg" alt="BlasphemousFondo">
 
             <div class="info-juego">
-                <img class="portada" src="../IMG/Blasphemous2.jpg" alt="HollowKnight">
+                <img class="portada" src="../IMG/Blasphemous2.jpg" alt="Blasphemous">
                 <div class="texto-juego">
                     <h2>Blasphemous 2</h2>
                     <p>Descripcion juego 1</p>
