--- a/juegos/CS2.html
+++ b/juegos/CS2.html
@@ -46,10 +46,10 @@
             <a href="../juegos/CS2.html" class="link">Counter Strike 2</a></br>
         </aside>
         <main>
-            <img class="fondo" src="../IMG/HollowKnight1.jpg" alt="HollowKnightFondo">
+            <img class="fondo" src="../IMG/fondos/CS2Fondo.jpg" alt="CS2Fondo">
 
             <div class="info-juego">
-                <img class="portada" src="../IMG/CounterStrike2.jpg" alt="HollowKnight">
+                <img class="portada" src="../IMG/CounterStrike2.jpg" alt="CS2">
                 <div class="texto-juego">
                     <h2>Counter Strike 2</h2>
                     <p>Descripcion juego 1</p>
