--- a/juegos/CultoftheLamb.html
+++ b/juegos/CultoftheLamb.html
@@ -46,10 +46,10 @@
             <a href="../juegos/CS2.html" class="link">Counter Strike 2</a></br>
         </aside>
         <main>
-            <img class="fondo" src="../IMG/HollowKnight1.jpg" alt="HollowKnightFondo">
+            <img class="fondo" src="../IMG/fondos/COLFondo.jpg" alt="CultOfTheLambFondo">
 
             <div class="info-juego">
-                <img class="portada" src="../IMG/CultOfTheLamb.jpg" alt="HollowKnight">
+                <img class="portada" src="../IMG/CultOfTheLamb.jpg" alt="CultOfTheLamb">
                 <div class="texto-juego">
                     <h2>Cult Of The Lamb</h2>
                     <p>Descripcion juego 1</p>
