--- a/juegos/DeathsDoor.html
+++ b/juegos/DeathsDoor.html
@@ -46,10 +46,10 @@
             <a href="../juegos/CS2.html" class="link">Counter Strike 2</a></br>
         </aside>
         <main>
-            <img class="fondo" src="../IMG/HollowKnight1.jpg" alt="HollowKnightFondo">
+            <img class="fondo" src="../IMG/fondos/DDFondo.jpg" alt="DeathsDoorFondo">
 
             <div class="info-juego">
-                <img class="portada" src="../IMG/DeathsDoor.jpg" alt="HollowKnight">
+                <img class="portada" src="../IMG/DeathsDoor.jpg" alt="DeathsDoor">
                 <div class="texto-juego">
                     <h2>DeathsDoor</h2>
                     <p>Descripcion juego 1</p>
