--- a/juegos/EldenRing.html
+++ b/juegos/EldenRing.html
@@ -46,10 +46,10 @@
             <a href="../juegos/CS2.html" class="link">Counter Strike 2</a></br>
         </aside>
         <main>
-            <img class="fondo" src="../IMG/HollowKnight1.jpg" alt="HollowKnightFondo">
+            <img class="fondo" src="../IMG/fondo/ERFondo.jpg" alt="EldenRingFondo">
 
             <div class="info-juego">
-                <img class="portada" src="../IMG/EldenRing.jpg" alt="HollowKnight">
+                <img class="portada" src="../IMG/EldenRing.jpg" alt="EldenRing">
                 <div class="texto-juego">
                     <h2>Elden Ring</h2>
                     <p>Descripcion juego 1</p>
