--- a/juegos/Forza.html
+++ b/juegos/Forza.html
@@ -46,10 +46,10 @@
             <a href="../juegos/CS2.html" class="link">Counter Strike 2</a></br>
         </aside>
         <main>
-            <img class="fondo" src="../IMG/HollowKnight1.jpg" alt="HollowKnightFondo">
+            <img class="fondo" src="../IMG/fondos/ForzaFondo.jpg" alt="ForzaFondo">
 
             <div class="info-juego">
-                <img class="portada" src="../IMG/ForzaHorizon5.jpg" alt="HollowKnight">
+                <img class="portada" src="../IMG/ForzaHorizon5.jpg" alt="Forza">
                 <div class="texto-juego">
                     <h2>Forza Horizon 5</h2>
                     <p>Descripcion juego 1</p>
