--- a/juegos/JWEvolution.html
+++ b/juegos/JWEvolution.html
@@ -46,10 +46,10 @@
             <a href="../juegos/CS2.html" class="link">Counter Strike 2</a></br>
         </aside>
         <main>
-            <img class="fondo" src="../IMG/HollowKnight1.jpg" alt="HollowKnightFondo">
+            <img class="fondo" src="../IMG/JWEFondo.jpg" alt="JurassicWorldFondo">
 
             <div class="info-juego">
-                <img class="portada" src="../IMG/JurassicWorldEvolution3.jpg" alt="HollowKnight">
+                <img class="portada" src="../IMG/JurassicWorldEvolution3.jpg" alt="JurassicWorldEvolution">
                 <div class="texto-juego">
                     <h2>Jurassic World Evolution 3</h2>
                     <p>Descripcion juego 1</p>
