--- a/juegos/Ori.html
+++ b/juegos/Ori.html
@@ -46,10 +46,10 @@
             <a href="../juegos/CS2.html" class="link">Counter Strike 2</a></br>
         </aside>
         <main>
-            <img class="fondo" src="../IMG/HollowKnight1.jpg" alt="HollowKnightFondo">
+            <img class="fondo" src="../IMG/fondos/OriFondo.jpg" alt="Ori&TheWillOfTheWispsFondo">
 
             <div class="info-juego">
-                <img class="portada" src="../IMG/Ori&TheWillOfTheWisps.jpg" alt="HollowKnight">
+                <img class="portada" src="../IMG/Ori&TheWillOfTheWisps.jpg" alt="Ori&TheWillOfTheWisps">
                 <div class="texto-juego">
                     <h2>Ori & The Will Of The Wisps</h2>
                     <p>Descripcion juego 1</p>
