--- a/juegos/StardewValley.html
+++ b/juegos/StardewValley.html
@@ -46,10 +46,10 @@
             <a href="../juegos/CS2.html" class="link">Counter Strike 2</a></br>
         </aside>
         <main>
-            <img class="fondo" src="../IMG/HollowKnight1.jpg" alt="HollowKnightFondo">
+            <img class="fondo" src="../IMG/fondos/StardewFondo.jpg" alt="StardewFondo">
 
             <div class="info-juego">
-                <img class="portada" src="../IMG/StardewValley.jpg" alt="HollowKnight">
+                <img class="portada" src="../IMG/StardewValley.jpg" alt="StardewValley">
                 <div class="texto-juego">
                     <h2>Stardew Valley</h2>
                     <p>Descripcion juego 1</p>
