--- a/juegos/Ultrakill.html
+++ b/juegos/Ultrakill.html
@@ -46,10 +46,10 @@
             <a href="../juegos/CS2.html" class="link">Counter Strike 2</a></br>
         </aside>
         <main>
-            <img class="fondo" src="../IMG/HollowKnight1.jpg" alt="HollowKnightFondo">
+            <img class="fondo" src="../IMG/fondos/UltrakillFondo.jpg" alt="UltrakillFondo">
 
             <div class="info-juego">
-                <img class="portada" src="../IMG/Ultrakill.jpg" alt="HollowKnight">
+                <img class="portada" src="../IMG/Ultrakill.jpg" alt="Ultrakill">
                 <div class="texto-juego">
                     <h2>Ultrakill</h2>
                     <p>Descripcion juego 1</p>
