--- a/juegos/Battlefield.html
+++ b/juegos/Battlefield.html
@@ -46,24 +46,31 @@
             <a href="../juegos/CS2.html" class="link">Counter Strike 2</a></br>
         </aside>
         <main>
-            <img class="fondo" src="../IMG/fondos/BtfFondo" alt="BattleFieldFondo">
+            <img class="fondo" src="../IMG/fondos/BtfFondo.jpeg" alt="BattleFieldFondo">
 
             <div class="info-juego">
                 <img class="portada" src="../IMG/Battlefield6.jpg" alt="BattleField">
                 <div class="texto-juego">
                     <h2>Battlefield 6</h2>
-                    <p>Descripcion juego 1</p>
+                    <p>Battlefield 6 es un shooter multijugador en primera persona ambientado en un conflicto moderno a gran escala. Ofrece combates con hasta 128 jugadores, entornos destructibles y un enfoque en la estrategia y el trabajo en equipo.</p>
                 </div>
             </div>
 
             <div class="bloque-info">
                 <h3>System Requirements</h3>
-                <p>Especificaciones juego 1</p>
+                <p>SO: Windows 10 de 64 bits</br>
+                    Procesador: AMD Ryzen 5 3600 / Intel Core i5-9600K</br>
+                    Memoria: 16 GB de RAM</br>
+                    Gráficos: NVIDIA GeForce RTX 2060 / AMD Radeon RX 5600 XT</br>
+                    Almacenamiento: 100 GB de espacio disponible</p>
             </div>
 
             <div class="bloque-info">
                 <h4>Features</h4>
-                <p>Features juego 1</p>
+                <p>Escenarios totalmente destructibles con el motor Frostbite.</br>
+                    Combates masivos con vehículos terrestres, aéreos y marítimos.</br>
+                    Modo Conquista y Hazard Zone.</br>
+                    Crossplay entre plataformas de nueva generación.</p>
             </div>
 
             <div class="bloque-info">
