--- a/juegos/Blasphemous.html
+++ b/juegos/Blasphemous.html
@@ -52,18 +52,25 @@
                 <img class="portada" src="../IMG/Blasphemous2.jpg" alt="Blasphemous">
                 <div class="texto-juego">
                     <h2>Blasphemous 2</h2>
-                    <p>Descripcion juego 1</p>
+                    <p>Secuela del aclamado metroidvania español. Mezcla acción, plataformas y estética religiosa barroca en un mundo oscuro y simbólico.</p>
                 </div>
             </div>
 
             <div class="bloque-info">
                 <h3>System Requirements</h3>
-                <p>Especificaciones juego 1</p>
+                <p>SO: Windows 10</br>
+                    Procesador: Intel Core i3-6100</br>
+                    Memoria: 8 GB RAM</br>
+                    Gráficos: GTX 750 Ti / Radeon HD 7950</br>
+                    Almacenamiento: 10 GB</p>
             </div>
 
             <div class="bloque-info">
                 <h4>Features</h4>
-                <p>Features juego 1</p>
+                <p>Tres armas distintas con estilos únicos.</br>
+                    Mundo interconectado lleno de secretos.</br>
+                    Jefes desafiantes con patrones complejos.</br>
+                    Arte 2D pixelado y banda sonora atmosférica.</p>
             </div>
 
             <div class="bloque-info">
