--- a/juegos/CS2.html
+++ b/juegos/CS2.html
@@ -52,18 +52,25 @@
                 <img class="portada" src="../IMG/CounterStrike2.jpg" alt="CS2">
                 <div class="texto-juego">
                     <h2>Counter Strike 2</h2>
-                    <p>Descripcion juego 1</p>
+                    <p>Actualización de CS:GO con el motor Source 2. Ofrece físicas realistas, mejores gráficos y el mismo enfoque competitivo de siempre.</p>
                 </div>
             </div>
 
             <div class="bloque-info">
                 <h3>System Requirements</h3>
-                <p>Especificaciones juego 1</p>
+                <p>SO: Windows 10 64 bits</br>
+                    Procesador: Intel Core i5-750 / AMD FX-8100</br>
+                    Memoria: 8 GB RAM</br>
+                    Gráficos: GTX 970 / RX 470</br>
+                    Almacenamiento: 85 GB</p>
             </div>
 
             <div class="bloque-info">
                 <h4>Features</h4>
-                <p>Features juego 1</p>
+                <p>Mejoras visuales y de iluminación con Source 2.</br>
+                    Granadas de humo dinámicas.</br>
+                    Modo competitivo y casual.</br>
+                    Matchmaking mejorado y servidores dedicados.</p>
             </div>
 
             <div class="bloque-info">
