--- a/juegos/CultoftheLamb.html
+++ b/juegos/CultoftheLamb.html
@@ -52,18 +52,25 @@
                 <img class="portada" src="../IMG/CultOfTheLamb.jpg" alt="CultOfTheLamb">
                 <div class="texto-juego">
                     <h2>Cult Of The Lamb</h2>
-                    <p>Descripcion juego 1</p>
+                    <p>Un roguelike en el que lideras un culto demoníaco mientras administras recursos y exploras mazmorras para expandir tu fe.</p>
                 </div>
             </div>
 
             <div class="bloque-info">
                 <h3>System Requirements</h3>
-                <p>Especificaciones juego 1</p>
+                <p>SO: Windows 10 64 bits</br>
+                    Procesador: Intel i5-3470 / AMD FX-8300</br>
+                    Memoria: 8 GB RAM</br>
+                    Gráficos: GTX 560 Ti / HD 7750</br>
+                    Almacenamiento: 4 GB</p>
             </div>
 
             <div class="bloque-info">
                 <h4>Features</h4>
-                <p>Features juego 1</p>
+                <p>Combina gestión de aldeas con acción roguelike.</br>
+                    Estilo artístico adorable y siniestro.</br>
+                    Cultiva seguidores con habilidades únicas.</br>
+                    Personaliza tu culto y templo.</p>
             </div>
 
             <div class="bloque-info">
