--- a/juegos/DeathsDoor.html
+++ b/juegos/DeathsDoor.html
@@ -51,19 +51,26 @@
             <div class="info-juego">
                 <img class="portada" src="../IMG/DeathsDoor.jpg" alt="DeathsDoor">
                 <div class="texto-juego">
-                    <h2>DeathsDoor</h2>
-                    <p>Descripcion juego 1</p>
+                    <h2>Death's Door</h2>
+                    <p>Un juego de acción y aventura donde un cuervo recolector de almas enfrenta criaturas y misterios en un mundo melancólico.</p>
                 </div>
             </div>
 
             <div class="bloque-info">
                 <h3>System Requirements</h3>
-                <p>Especificaciones juego 1</p>
+                <p>SO: Windows 10</br>
+                    Procesador: Intel Core i5-8250U</br>
+                    Memoria: 8 GB RAM</br>
+                    Gráficos: GeForce MX150</br>
+                    Almacenamiento: 20 GB</p>
             </div>
 
             <div class="bloque-info">
                 <h4>Features</h4>
-                <p>Features juego 1</p>
+                <p>Combate fluido con armas cuerpo a cuerpo y magia.</br>
+                    Mundo semiabierto lleno de secretos.</br>
+                    Estilo visual minimalista y atmósfera poética.</br>
+                    Jefes memorables y exploración libre.</p>
             </div>
 
             <div class="bloque-info">
