--- a/juegos/EldenRing.html
+++ b/juegos/EldenRing.html
@@ -46,7 +46,7 @@
             <a href="../juegos/CS2.html" class="link">Counter Strike 2</a></br>
         </aside>
         <main>
-            <img class="fondo" src="../IMG/fondo/ERFondo.jpg" alt="EldenRingFondo">
+            <img class="fondo" src="../IMG/fondos/ERFondo.jpg" alt="EldenRingFondo">
 
             <div class="info-juego">
                 <img class="portada" src="../IMG/EldenRing.jpg" alt="EldenRing">
