--- a/juegos/GoWRagnarok.html
+++ b/juegos/GoWRagnarok.html
@@ -46,24 +46,31 @@
             <a href="../juegos/CS2.html" class="link">Counter Strike 2</a></br>
         </aside>
         <main>
-            <img class="fondo" src="../IMG/GoWFondo.jpg" alt="GodIfWarFondo">
+            <img class="fondo" src="../IMG/fondos/GoWFondo.jpg" alt="GodIfWarFondo">
 
             <div class="info-juego">
                 <img class="portada" src="../IMG/GoWRagnarok.jpg" alt="GodOfWar">
                 <div class="texto-juego">
                     <h2>God Of War: Ragnarok</h2>
-                    <p>Descripcion juego 1</p>
+                    <p>God of War: Ragnarök continúa la saga de Kratos y Atreus en un viaje por los Nueve Reinos mientras enfrentan el fin del mundo nórdico. Combina narrativa cinematográfica con combates brutales y exploración épica.</p>
                 </div>
             </div>
 
             <div class="bloque-info">
                 <h3>System Requirements</h3>
-                <p>Especificaciones juego 1</p>
+                <p>SO: Windows 10 de 64 bits</br>
+                    Procesador: Intel i5-6600K / AMD Ryzen 5 2600</br>
+                    Memoria: 16 GB de RAM</br>
+                    Gráficos: NVIDIA GTX 1060 / AMD RX 570</br>
+                    Almacenamiento: 70 GB de espacio disponible</p>
             </div>
 
             <div class="bloque-info">
                 <h4>Features</h4>
-                <p>Features juego 1</p>
+                <p>Historia cinematográfica con doblaje completo en varios idiomas.</br>
+                    Combate fluido con múltiples armas y habilidades.</br>
+                    Amplia exploración por los Nueve Reinos.</br>
+                    Modo rendimiento y fidelidad para ajustar la experiencia.</p>
             </div>
 
             <div class="bloque-info">
