--- a/juegos/HollowKnight.html
+++ b/juegos/HollowKnight.html
@@ -52,18 +52,25 @@
                 <img class="portada" src="../IMG/HollowKnight.jpg" alt="HollowKnight">
                 <div class="texto-juego">
                     <h2>Hollow Knight</h2>
-                    <p>Descripcion juego 1</p>
+                    <p>Hollow Knight es un metroidvania de acción y exploración en 2D ambientado en el misterioso reino subterráneo de Hallownest. Combina combates precisos, arte dibujado a mano y una historia profunda y melancólica.</p>
                 </div>
             </div>
 
             <div class="bloque-info">
                 <h3>System Requirements</h3>
-                <p>Especificaciones juego 1</p>
+                <p>SO: Windows 7 / 8 / 10</br>
+                    Procesador: Intel Core 2 Duo E5200</br>
+                    Memoria: 4 GB de RAM</br>
+                    Gráficos: GeForce 9800GTX+ (1GB)</br>
+                    Almacenamiento: 9 GB disponibles</p>
             </div>
 
             <div class="bloque-info">
                 <h4>Features</h4>
-                <p>Features juego 1</p>
+                <p>Mapa interconectado con múltiples zonas y secretos.</br>
+                    Más de 130 enemigos y jefes desafiantes.</br>
+                    Sistema de amuletos para personalizar habilidades.</br>
+                    Estilo visual dibujado a mano y banda sonora orquestal.</p>
             </div>
 
             <div class="bloque-info">
