--- a/juegos/JWEvolution.html
+++ b/juegos/JWEvolution.html
@@ -46,7 +46,7 @@
             <a href="../juegos/CS2.html" class="link">Counter Strike 2</a></br>
         </aside>
         <main>
-            <img class="fondo" src="../IMG/JWEFondo.jpg" alt="JurassicWorldFondo">
+            <img class="fondo" src="../IMG/fondos/JWE3Fondo.jpg" alt="JurassicWorldFondo">
 
             <div class="info-juego">
                 <img class="portada" src="../IMG/JurassicWorldEvolution3.jpg" alt="JurassicWorldEvolution">
