--- a/juegos/BG3.html
+++ b/juegos/BG3.html
@@ -51,19 +51,26 @@
             <div class="info-juego">
                 <img class="portada" src="../IMG/BaldursGate3.jpg" alt="BG3">
                 <div class="texto-juego">
-                    <h2>bBaldurs Gate 3</h2>
-                    <p>Descripcion juego 1</p>
+                    <h2>Baldur's Gate 3</h2>
+                    <p>RPG de rol táctico ambientado en el universo de Dungeons & Dragons. Ofrece elecciones morales, exploración profunda y combates por turnos con una historia ramificada.</p>
                 </div>
             </div>
 
             <div class="bloque-info">
                 <h3>System Requirements</h3>
-                <p>Especificaciones juego 1</p>
+                <p>SO: Windows 10 64 bits</br>
+                    Procesador: Intel i5-4690 / AMD FX 8350</br>
+                    Memoria: 16 GB RAM</br>
+                    Gráficos: GTX 970 / RX 480</br>
+                    Almacenamiento: 150 GB</p>
             </div>
 
             <div class="bloque-info">
                 <h4>Features</h4>
-                <p>Features juego 1</p>
+                <p>Sistema de combate por turnos con tiradas de dados.</br>
+                    Cooperativo online y pantalla dividida local.</br>
+                    Decisiones que cambian la historia.</br>
+                    Mundo abierto lleno de misiones y secretos.</p>
             </div>
 
             <div class="bloque-info">
